# skintest

./: .gitignore  README.md  setup.cfg
skintest/: __main__.py  main.py
skintest/data/skin/: skin.toml
skintest/lib/: skin.py  utils.py  window.py
