[metadata]
name = skintest
version = attr: skintest.__version__
description = skintest
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/DigiDuncan/skintest
    Tracker=https://github.com/DigiDuncan/skintest/issues

[options]
packages = find:
python_requires = >=3.12
zip_safe = yes
include_package_data = True
install_requires =
    arcade==3.0.0.dev26
    python-benedict==0.33.2

[options.extras_require]
dev =
    pytest==8.1.1
    flake8==7.0.0
    autopep8==2.0.4

[options.entry_points]
console_scripts =
    skintest = skintest.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
